k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: cloudbite-ingress 
  namespace: cloudbite-dev 
spec: 
  ingressClassName: nginx 
  rules: 
    - http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: frontend-service 
                port: 
                  number: 80
        
          - path: /api 
            pathType: Prefix
            backend: 
              service: 
                name: backend-service 
                port: 
                  number: 4000
